// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`field-reference.json (provider=cockroachdb, runtime=edge) wrong field type 1`] = `

Invalid \`prisma.product.findMany()\` invocation:

{
  where: {
    properties1: {
      equals: prisma.product.fields.title
      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    }
  }
}

Argument equals: Got invalid value prisma.product.fields.title on prisma.findManyProduct. Provided StringFieldRefInput<Product>, expected Json or JsonFieldRefInput or JsonNullValueFilter.


`;

exports[`field-reference.json (provider=cockroachdb, runtime=node) wrong field type 1`] = `

Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/json/tests.ts:0:0

  XX })
  XX 
  XX test('wrong field type', async () => {
→ XX   const products = prisma.product.findMany({
          where: {
            properties1: {
              equals: prisma.product.fields.title
              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
            }
          }
        })

Argument equals: Got invalid value prisma.product.fields.title on prisma.findManyProduct. Provided StringFieldRefInput<Product>, expected Json or JsonFieldRefInput or JsonNullValueFilter.


`;

exports[`field-reference.json (provider=mongodb, runtime=edge) wrong field type 1`] = `

Invalid \`prisma.product.findMany()\` invocation:

{
  where: {
    properties1: {
      equals: prisma.product.fields.title
      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    }
  }
}

Argument equals: Got invalid value prisma.product.fields.title on prisma.findManyProduct. Provided StringFieldRefInput<Product>, expected Json or JsonFieldRefInput.


`;

exports[`field-reference.json (provider=mongodb, runtime=node) wrong field type 1`] = `

Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/json/tests.ts:0:0

  XX })
  XX 
  XX test('wrong field type', async () => {
→ XX   const products = prisma.product.findMany({
          where: {
            properties1: {
              equals: prisma.product.fields.title
              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
            }
          }
        })

Argument equals: Got invalid value prisma.product.fields.title on prisma.findManyProduct. Provided StringFieldRefInput<Product>, expected Json or JsonFieldRefInput.


`;

exports[`field-reference.json (provider=mysql, runtime=edge) wrong field type 1`] = `

Invalid \`prisma.product.findMany()\` invocation:

{
  where: {
    properties1: {
      equals: prisma.product.fields.title
      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    }
  }
}

Argument equals: Got invalid value prisma.product.fields.title on prisma.findManyProduct. Provided StringFieldRefInput<Product>, expected Json or JsonFieldRefInput or JsonNullValueFilter.


`;

exports[`field-reference.json (provider=mysql, runtime=node) wrong field type 1`] = `

Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/json/tests.ts:0:0

  XX })
  XX 
  XX test('wrong field type', async () => {
→ XX   const products = prisma.product.findMany({
          where: {
            properties1: {
              equals: prisma.product.fields.title
              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
            }
          }
        })

Argument equals: Got invalid value prisma.product.fields.title on prisma.findManyProduct. Provided StringFieldRefInput<Product>, expected Json or JsonFieldRefInput or JsonNullValueFilter.


`;

exports[`field-reference.json (provider=postgresql, runtime=edge) wrong field type 1`] = `

Invalid \`prisma.product.findMany()\` invocation:

{
  where: {
    properties1: {
      equals: prisma.product.fields.title
      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    }
  }
}

Argument equals: Got invalid value prisma.product.fields.title on prisma.findManyProduct. Provided StringFieldRefInput<Product>, expected Json or JsonFieldRefInput or JsonNullValueFilter.


`;

exports[`field-reference.json (provider=postgresql, runtime=node) wrong field type 1`] = `

Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/json/tests.ts:0:0

  XX })
  XX 
  XX test('wrong field type', async () => {
→ XX   const products = prisma.product.findMany({
          where: {
            properties1: {
              equals: prisma.product.fields.title
              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
            }
          }
        })

Argument equals: Got invalid value prisma.product.fields.title on prisma.findManyProduct. Provided StringFieldRefInput<Product>, expected Json or JsonFieldRefInput or JsonNullValueFilter.


`;
